external/kyverno/policies/common/image/disallow-latest-tag-external-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag-external-images
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/category: Image
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: DS/Deployment/STS
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/description: >-
      Using the ':latest' tag for container images makes them mutable and may result in unexpected errors if they change.
      It is considered a best practice to use a versioned, immutable tag that maps to a specific version of an application Pod.
      This policy ensures that all container images in a Pod specify a versioned tag and prohibits the use of the 'latest' tag
      , except for internal images.
spec:
  validationFailureAction: Audit
  background: false
  failurePolicy: Ignore
  rules:
  - name: require-image-tag-d
    match:
      any:
      - resources:
          kinds:
          - DaemonSet
          - Deployment
          - StatefulSet
    validate:
      message: An image tag is required.
      pattern:
        spec:
          template:
            spec:
              containers:
              - image: '*:?*'
  - name: validate-image-tag-d
    match:
      any:
      - resources:
          kinds:
          - DaemonSet
          - Deployment
          - StatefulSet
    validate:
      message: Using a mutable image tag e.g. 'latest' is not allowed.
      anyPattern:
      - spec:
          template:
            spec:
              containers:
              - image: "crcommoninfra?*.azurecr.io/*:latest"
      - spec:
          template:
            spec:
              containers:
              - image: "!*:latest"
